.k8s/raw/prod/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipo-os-web
  namespace: default
  labels:
    app: pipo-os-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pipo-os-web
  template:
    metadata:
      labels:
        app: pipo-os-web
    spec:
      nodeSelector:
        serviceType: pipo-core-arm64
      tolerations:
        - key: dedicated
          operator: Equal
          value: pipo-core-arm64
          effect: NoSchedule
      containers:
        - name: pipo-os-web
          image: 588824502706.dkr.ecr.sa-east-1.amazonaws.com/services/pipo-os-web:IMAGE_TAG
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: 32Mi
              cpu: 25m
            limits:
              memory: 128Mi
              cpu: 200m
