.k8s/raw/prod/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipo-os-web
  namespace: default
spec:
  selector:
    app: pipo-os-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
