.k8s/raw/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipo-os
  namespace: default
spec:
  selector:
    app: pipo-os
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
