.k8s/raw/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipo-os
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRule REQUEST_URI "@streq /api/auth/google/callback" "id:1000,phase:1,pass,nolog,ctl:ruleRemoveById=942130"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - os.piposaude.com.br
  rules:
    - host: os.piposaude.com.br
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: pipo-os-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pipo-os-web
                port:
                  number: 80
